--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </body>
 
   <script>
-    fetch("http://localhost:4000/quote")
+    fetch("https://quote-jlj4.onrender.com/quote")
       .then((res) => res.json())
       .then((data) => {
         for (let i = 0; i < data.length; i++) {
