--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       });
 
     function deleteQuote(id) {
-      fetch(`http://localhost:4000/quote/${id}`, {
+      fetch(`https://quote-jlj4.onrender.com/quote${id}`, {
         method: "DELETE",
       })
         .then((res) => res.json())
